Added unit tests for fabric processor